<resources>
    <string name="app_name">SoundWaves</string>
    <string name="playlist_title">Mi Playlist</string>
    <string name="description_text_playlist">Esto es una playlist con canciones</string>
    <string name="playlist_section_title">Tus Playlists</string>
    <string name="artist_section_title">Top 10 Artistas</string>
    <string name="album_section_title">Top 10 Albums</string>
    <string name="loginMainText">Login to Account</string>
    <string name="loginRegisterText">Create an Account</string>
    <string name="loginEmailText">Email</string>
    <string name="loginEmailHint">Enter your Email</string>
    <string name="loginPasswordText">Password</string>
    <string name="loginPasswordHint">Enter your Password</string>
    <string name="loginButtonText">Login</string>
    <string name="loginRegisterButton">Register</string>
    <string name="registerMainText">Create an Account</string>
    <string name="registerUsername">Username</string>
    <string name="registerUsernameInputText">Enter a username</string>
    <string name="registerEmail">Email</string>
    <string name="registerEmailInput">Enter your email</string>
    <string name="registerPassword">Password</string>
    <string name="registerPasswordInput">Enter a Password</string>
    <string name="registerPasswordConfirm">Confirm Password</string>
    <string name="registerPasswordConfirmInput">Re-enter password</string>
    <string name="registerButtonCreate">Create Account</string>
    <string name="artistTitlePlaceholder">Artist</string>
    <string name="artistTrackTitlePlaceholder">Track</string>
    <string name="artistTrackAlbumPlaceholder">Track Album</string>
    <string name="artistTrackSectionTitle">Top Tracks</string>
    <string name="artistAlbumsSectionTitle">Albums</string>
</resources>