<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="119dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/loginRegisterText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/registerUsernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="24dp"
        android:text="Username"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_condensed_regular"
        app:layout_constraintBottom_toTopOf="@+id/registerUsernameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerMainText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerUsernameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerUsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corners"
            android:hint="Username"
            android:fontFamily="@font/roboto_condensed_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registerEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/loginEmailText"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_condensed_regular"
        app:layout_constraintBottom_toTopOf="@+id/registerEmailInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corners"
            android:fontFamily="@font/roboto_condensed_regular"
            android:hint="@string/loginEmailText" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registerPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_condensed_regular"
        app:layout_constraintBottom_toTopOf="@+id/registerPasswordInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corners"
            android:fontFamily="@font/roboto_condensed_regular"
            android:hint="@string/loginPasswordText" />
        />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Confirm Password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_condensed_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordConfirmInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPasswordConfirmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corners"
            android:fontFamily="@font/roboto_condensed_regular"
            android:hint="Re-enter password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="Create Account"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordConfirmInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>